[gd_scene load_steps=10 format=2]

[ext_resource path="res://Global/GUIManager.gd" type="Script" id=1]
[ext_resource path="res://Textures/HealthFrame.png" type="Texture" id=2]
[ext_resource path="res://Textures/Frame9.png" type="Texture" id=3]
[ext_resource path="res://Sounds/Select.ogg" type="AudioStream" id=4]
[ext_resource path="res://Fonts/ButtonFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Textures/Health.png" type="Texture" id=6]
[ext_resource path="res://Textures/Square.png" type="Texture" id=7]
[ext_resource path="res://Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="CanvasLayer" type="CanvasLayer"]
layer = 0
script = ExtResource( 1 )

[node name="GUI" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="GUI"]
margin_left = 24.0
margin_right = 112.0
margin_bottom = 32.0
value = 100.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthFrame" type="TextureRect" parent="GUI"]
margin_right = 120.0
margin_bottom = 32.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="NinePatchRect" parent="GUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -88.0
margin_right = 88.0
margin_bottom = 96.0
texture = ExtResource( 3 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/PauseMenu"]
anchor_left = 0.136
anchor_top = 0.13
anchor_right = 0.864
anchor_bottom = 0.87
margin_left = -15.936
margin_top = -14.92
margin_right = 15.936
margin_bottom = 11.92
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuText" type="RichTextLabel" parent="GUI/PauseMenu/VBoxContainer"]
margin_right = 160.0
margin_bottom = 63.0
grow_vertical = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]You've survived [x] levels![center]"
text = "You've survived [x] levels!"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/PauseMenu/VBoxContainer"]
margin_top = 67.0
margin_right = 160.0
margin_bottom = 127.0
grow_vertical = 2
size_flags_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/PauseMenu/VBoxContainer/HBoxContainer"]
margin_left = 53.0
margin_right = 107.0
margin_bottom = 60.0
size_flags_vertical = 3
custom_constants/separation = 12
alignment = 1

[node name="Next" type="Button" parent="GUI/PauseMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 54.0
margin_bottom = 24.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Menu")
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
enabled_focus_mode = 0
text = "Next"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="GUI/PauseMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 40.0
margin_right = 72.0
margin_bottom = 68.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Menu")
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
enabled_focus_mode = 0
text = "Retry"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="GUI/PauseMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 54.0
margin_bottom = 60.0
focus_neighbour_top = NodePath("../Next")
focus_neighbour_bottom = NodePath("../Quit")
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
enabled_focus_mode = 0
text = "Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="GUI/PauseMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 54.0
margin_bottom = 96.0
focus_neighbour_top = NodePath("../Menu")
focus_neighbour_bottom = NodePath("../Next")
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
enabled_focus_mode = 0
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -16.0
bus = "Sounds"

[node name="DetTimer" type="HBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DetTimer"]
margin_left = 120.0
margin_right = 392.0
margin_bottom = 288.0
alignment = 1

[node name="Label" type="Label" parent="DetTimer/VBoxContainer"]
margin_top = 120.0
margin_right = 272.0
margin_bottom = 142.0
custom_fonts/font = ExtResource( 5 )
text = "Get back to the Harvester!"

[node name="Timer" type="Label" parent="DetTimer/VBoxContainer"]
margin_top = 146.0
margin_right = 272.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "3"
align = 1

[connection signal="pressed" from="GUI/PauseMenu/VBoxContainer/HBoxContainer/VBoxContainer/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="GUI/PauseMenu/VBoxContainer/HBoxContainer/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="GUI/PauseMenu/VBoxContainer/HBoxContainer/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="GUI/PauseMenu/VBoxContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
